some more maven changes
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1_2_0@556283 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -151,6 +151,12 @@
     </profile>
     <profile>
       <id>generate-assembly</id>
+      <activation>
+        <property>
+          <name>performRelease</name>
+          <value>true</value>
+        </property>
+      </activation>
       <build>
         <plugins>
           <plugin>
