--- a/api/pom.xml
+++ b/api/pom.xml
@@ -72,6 +72,12 @@
   <profiles>
     <profile>
       <id>generate-assembly</id>
+      <activation>
+        <property>
+          <name>performRelease</name>
+          <value>true</value>
+        </property>
+      </activation>
       <build>
         <plugins>
           <plugin>
