--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -24,7 +24,9 @@
 
     <plugins>
        <plugin>
-        <artifactId>maven-dependency-plugin</artifactId>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>dependency-maven-plugin</artifactId>
+
         <executions>
 
           <execution>
