adding Guice DI support, w/ tests
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1@581760 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -337,6 +337,12 @@
       <artifactId>easymockclassextension</artifactId>
       <scope>test</scope>
     </dependency>
+	<dependency>
+		<groupId>com.google.code.guice</groupId>
+		<artifactId>guice</artifactId>
+		<version>1.0</version>
+		<scope>provided</scope>
+	</dependency>    
   </dependencies>
   <reporting>
     <plugins>
