switching over to http from https for the dev.java.net repository - obviously they are using a self-fabricated certificate which the institution I'm currently at won't accept
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1@584230 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
      <repository>
        <id>java.net</id>
        <name>java.net Maven 1 Repository</name>
-       <url>https://maven-repository.dev.java.net/nonav/repository</url>
+       <url>http://download.java.net/maven/1</url>
        <layout>legacy</layout>
     </repository>
     <repository>
