Fix for MYFACES-1745  (use the new plugins version)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@593236 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -49,7 +49,7 @@
       <plugin>
         <groupId>org.apache.myfaces.trinidadbuild</groupId>
         <artifactId>maven-faces-plugin</artifactId>
-        <version>1.2.1.1</version>
+        <version>1.2.4-SNAPSHOT</version>
         <configuration>
           <taglibs>
             <h>http://java.sun.com/jsf/html</h>
