added site distribution for core project
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@593600 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -57,4 +57,11 @@
             </plugins>
         </pluginManagement>
     </build>
+    <distributionManagement>
+      <site>
+        <id>apache-site</id>
+        <name>Apache Website</name>
+        <url>scpexe://minotaur.apache.org/www/myfaces.apache.org/myfaces-core-project/</url>
+      </site>
+    </distributionManagement>
 </project>
