--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.apache.myfaces</groupId>
     <artifactId>myfaces</artifactId>
-    <version>2</version>
+    <version>3</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -32,26 +32,6 @@
        <name>java.net Maven 1 Repository</name>
        <url>http://download.java.net/maven/1</url>
        <layout>legacy</layout>
-    </repository>
-    <repository>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <id>apache.snapshots</id>
-      <url>http://people.apache.org/repo/m2-snapshot-repository</url>
-    </repository>
-    <repository>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>myfaces-repo</id>
-      <url>http://myfaces.zones.apache.org/dist/maven-repository</url>
     </repository>
   </repositories>
   <build>
@@ -264,17 +244,11 @@
         </pluginRepository>
     </pluginRepositories>
 
-  <distributionManagement>
-    <site>
-      <id>apache-site</id>
-      <name>Apache Website</name>
-      <url>scpexe://minotaur.apache.org/www/incubator.apache.org/adffaces</url>
-    </site>
-    <snapshotRepository>
-      <uniqueVersion>false</uniqueVersion>
-      <id>apache-maven-snapshots</id>
-      <name>Apache Maven Snapshot Repository</name>
-      <url>scpexe://minotaur.apache.org/www/people.apache.org/repo/m2-snapshot-repository</url>
-    </snapshotRepository>
-  </distributionManagement>
+    <distributionManagement>
+      <site>
+        <id>apache-site</id>
+        <name>Apache Website</name>
+        <url>scpexe://minotaur.apache.org/www/myfaces.apache.org/core12/</url>
+      </site>
+    </distributionManagement>
 </project>
