--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -8,8 +8,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-impl</artifactId>
-  <name>Impl</name>
-  <description>This is the MyFaces Impl Subproject Description [INSERT MORE STUFF HERE]</description>
+  <name>Apache MyFaces JSF-1.1 Implementation</name>
+  <description>
+    The Apache MyFaces JSF-1.1 Implementation project provides a full JSF 1.1
+    implementation as defined in JSR-127 (see also http://www.jcp.org/en/jsr/detail?id=127).
+  </description>
   <url>http://myfaces.apache.org</url>
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/impl</connection>
