--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -49,7 +49,7 @@
       <plugin>
         <groupId>org.apache.myfaces.trinidadbuild</groupId>
         <artifactId>maven-faces-plugin</artifactId>
-        <version>1.2.5-SNAPSHOT</version>
+        <version>1.2.5</version>
         <configuration>
           <taglibs>
             <h>http://java.sun.com/jsf/html</h>
