--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,20 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>cobertura-maven-plugin</artifactId>
       </plugin>
+      <!-- override PMD settings to set targetJdk -->
+      <plugin>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <version>2.0</version>
+        <configuration>
+          <rulesets>
+            <ruleset>/rulesets/basic.xml</ruleset>
+            <ruleset>/rulesets/unusedcode.xml</ruleset>
+          </rulesets>
+          <linkXref>true</linkXref>
+          <minimumTokens>100</minimumTokens>
+          <targetJdk>1.5</targetJdk>
+        </configuration>
+      </plugin>
     </plugins>
   </reporting>
   <dependencyManagement>
