--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,11 @@
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-core-project</artifactId>
   <packaging>pom</packaging>
-  <name>Core Project</name>
+  <name>Apache MyFaces JSF-1.2 Core Project</name>
+  <description>
+    This project is the home of the MyFaces implementation of the JavaServer Faces 1.1 specification, and
+    consists of an API module (javax.faces.* classes) and an implementation module (org.apache.myfaces.* classes).
+  </description>
   <version>1.2.1-SNAPSHOT</version>
   <url>http://myfaces.apache.org/projects</url>
   <issueManagement>
