Exclude some classes from the pmd report to stop them crashing.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@604884 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
           <linkXref>true</linkXref>
           <minimumTokens>100</minimumTokens>
           <targetJdk>1.5</targetJdk>
+          <excludes>
+            <!-- these class make the PMD plugin crash (NullPointerException). -->
+            <exclude>org/apache/myfaces/el/convert/PropertyResolverToELResolver.java</exclude>
+            <exclude>org/apache/myfaces/el/PropertyResolverImpl.java</exclude>
+          </excludes>
         </configuration>
       </plugin>
     </plugins>
