--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
       <dependency>
         <groupId>org.apache.myfaces.shared</groupId>
         <artifactId>myfaces-shared-impl</artifactId>
-        <version>3.0.1-SNAPSHOT</version>
+        <version>3.0.1</version>
       </dependency>
 
       <dependency>
