MYFACES-1790 update to use 126-SNAPSHOT + better orga. of the plugs version number
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@605485 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
           <version>2.3</version>
         </plugin>
         <plugin>
+          <groupId>org.apache.myfaces.trinidadbuild</groupId>
+          <artifactId>maven-faces-plugin</artifactId>
+          <version>1.2.6-SNAPSHOT</version>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-idea-plugin</artifactId>
 	        <configuration>
