--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.apache.myfaces</groupId>
     <artifactId>myfaces</artifactId>
-    <version>4</version>
+    <version>5-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
@@ -63,11 +63,6 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.3</version>
-        </plugin>
-        <plugin>
           <groupId>org.apache.myfaces.trinidadbuild</groupId>
           <artifactId>maven-faces-plugin</artifactId>
           <version>1.2.6-SNAPSHOT</version>
@@ -75,6 +70,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-idea-plugin</artifactId>
+          <version>2.1</version>
           <configuration>
             <jdkName>1.5</jdkName>
             <linkModules>true</linkModules>
@@ -85,7 +81,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>cobertura-maven-plugin</artifactId>
-          <version>2.0</version>
+          <version>2.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -100,7 +96,7 @@
       <!-- override PMD settings to set targetJdk -->
       <plugin>
         <artifactId>maven-pmd-plugin</artifactId>
-        <version>2.0</version>
+        <version>2.2</version>
         <configuration>
           <rulesets>
             <ruleset>/rulesets/basic.xml</ruleset>
