Correctly set url for module; needed for correct site generation.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@607854 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -11,6 +11,7 @@
   <description>
     MyFaces API - JSR 252 ( http://www.jcp.org/en/jsr/detail?id=252 )
   </description>
+  <url>http://myfaces.apache.org/core12/myfaces-api</url>
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/api</connection>
     <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/api</developerConnection>
