--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>myfaces-impl</artifactId>
   <name>Impl</name>
   <description>MyFaces Implementation - JSR 252 ( http://www.jcp.org/en/jsr/detail?id=252 )</description>
-  <url>http://myfaces.apache.org</url>
+  <url>http://myfaces.apache.org/core12/myfaces-impl</url>
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/impl</connection>
     <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/impl</developerConnection>
