--- a/api/pom.xml
+++ b/api/pom.xml
@@ -80,17 +80,17 @@
                 <dependency>
                   <groupId>commons-logging</groupId>
                   <artifactId>commons-logging</artifactId>
-                  <version>1.0.4</version>
+                  <version>1.1.1</version>
                 </dependency>
                 <dependency>
                   <groupId>velocity</groupId>
                   <artifactId>velocity</artifactId>
-                  <version>1.4</version>
+                  <version>1.5</version>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.myfaces.maven</groupId>
                     <artifactId>build-tools</artifactId>
-                    <version>1.0.6-SNAPSHOT</version>
+                    <version>1.0.7-SNAPSHOT</version>
                 </dependency>
             </dependencies> 
           </plugin>
@@ -150,7 +150,7 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.0.4</version>
+      <version>1.1.1</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -162,7 +162,7 @@
     <dependency>
       <groupId>commons-digester</groupId>
       <artifactId>commons-digester</artifactId>
-      <version>1.6</version>
+      <version>1.8</version>
       <scope>compile</scope>
       <exclusions>
         <exclusion>
@@ -182,7 +182,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.0</version>
+        <version>2.3</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -206,15 +206,17 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jxr-maven-plugin</artifactId>
+        <version>2.0-beta-1</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>surefire-report-maven-plugin</artifactId>
+        <version>2.0-beta-1</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>taglist-maven-plugin</artifactId>
-        <version>2.0</version>
+        <version>2.1</version>
       </plugin>
     </plugins>
   </reporting>
