--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -10,8 +10,7 @@
   <artifactId>myfaces-impl</artifactId>
   <name>Apache MyFaces JSF-1.1 Implementation</name>
   <description>
-    The Apache MyFaces JSF-1.1 Implementation project provides a full JSF 1.1
-    implementation as defined in JSR-127 (see also http://www.jcp.org/en/jsr/detail?id=127).
+    The private implementation classes of the Apache MyFaces Core JSF-1.1 Implementation.
   </description>
   <scm>
     <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk/impl</connection>
