Add doc on purpose of generate-site profile.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@609050 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -111,6 +111,13 @@
   </build>
   <profiles>
     <profile>
+      <!--
+        - Whenever the full website is generated, the command
+        -   mvn -Pgenerate-site site:site
+        - should be used. This will create the "tlddoc" directory containing
+        - nicely-formatted versions of the docs in the jsp taglib file, ie
+        - docs on all the available tags and their properties.
+        -->
       <id>generate-site</id>
       <build>
         <plugins>
