Recommend using lifecycle phase rather than plugin:goal syntax.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@609231 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -113,7 +113,7 @@
     <profile>
       <!--
         - Whenever the full website is generated, the command
-        -   mvn -Pgenerate-site site:site
+        -   mvn -Pgenerate-site site
         - should be used. This will create the "tlddoc" directory containing
         - nicely-formatted versions of the docs in the jsp taglib file, ie
         - docs on all the available tags and their properties.
