--- a/api/pom.xml
+++ b/api/pom.xml
@@ -71,6 +71,11 @@
   </build>
   <profiles>
     <profile>
+      <!--
+        - Generate files that are good to have when doing a release to main
+        - repositories, but which are not wanted when doing a quick 
+        - "mvn install" before testing some code modifications.
+        -->
       <id>generate-assembly</id>
       <build>
         <plugins>
@@ -93,33 +98,6 @@
                 <goals>
                   <goal>jar</goal>
                 </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>regenerate-component-code</id>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>regenerate-component-code-parts</id>
-                <phase>process-sources</phase>
-                <goals>
-                  <goal>run</goal>
-                </goals>
-                <configuration>
-                  <tasks>
-                    <property value="${project.basedir}/src/main/java" name="src.dir" />
-                    <ant inheritRefs="true" inheritAll="true" antfile="build.xml" dir="${project.basedir}">
-                      <target name="generate-components" />
-                    </ant>
-                  </tasks>
-                </configuration>
               </execution>
             </executions>
           </plugin>
@@ -164,6 +142,10 @@
   </profiles>
   <dependencies>
     <dependency>
+       <!-- 
+         - The file with config metadata for generating component classes. The contents
+         - of this jarfile are processed using the maven-faces-plugin.
+         -->
        <groupId>org.apache.myfaces.core</groupId>
        <artifactId>myfaces-build</artifactId>
        <version>1.2.1-SNAPSHOT</version>
